--- a/styles/light.css
+++ b/styles/light.css
@@ -1,8 +1,17 @@
+:root.theme-light {
+  --accent-color: #ff8dcb;
+  --text-color: #353430;
+  --header__title-color: #ffc2e6;
+}
+
 /*
   Специально для светлой темы при наличии класса.
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
+
+.page {
+}
 
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
