--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,8 +1,108 @@
+:root.theme-dark {
+  --accent-color: #ff0070;
+  --text-color: #f1b2ce;
+  --header__title-color: #db00ff;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --accent-color: #ff0070;
+    --text-color: #f1b2ce;
+    --header__title-color: #db00ff;
+    /* Дублируем переменные темной темы */
+  }
+}
+
+.page.theme_dark {
+  --accent-color: #ff0070;
+  --text-color: #f1b2ce;
+  --header__title-color: #db00ff;
+  --title: #000028;
+
+  background-image: url("../images/cover-image-dark.png");
+
+  .decorated-el {
+    position: absolute;
+    top: 0px;
+    right: 28px;
+  }
+
+  .decorated-el::before {
+    position: absolute;
+    right: 8px;
+    content: "rec";
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: var(--accent-color);
+  }
+
+  .decorated-el::after {
+    position: absolute;
+    content: "";
+    top: 8px;
+    right: -18px;
+    height: 9px;
+    width: 9px;
+    border-radius: 50%;
+    background-color: var(--accent-color);
+    box-shadow: 0 0 4px 2px var(--accent-color);
+  }
+
+  .decorated-zone::after {
+    border-top: 1px solid var(--accent-color);
+    border-right: 1px solid var(--accent-color);
+  }
+
+  .decorated-zone::before {
+    border-bottom: 1px solid var(--accent-color);
+    border-left: 1px solid var(--accent-color);
+  }
+
+  .header__theme-menu-button {
+    color: var(--accent-color);
+  }
+
+  .header__theme-menu-button:hover {
+    outline: 1px solid var(--accent-color);
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border-bottom: 1px solid var(--accent-color);
+  }
+
+  .header__theme-menu-button_active {
+    border: 1px solid var(--accent-color);
+    pointer-events: none;
+  }
+
+  .header__title {
+    color: var(--header__title-color);
+    text-shadow: 4px 4px 0 var(--accent-color);
+  }
+  .title_dark {
+    color: var(--title);
+  }
+
+  .question {
+    color: var(--accent-color);
+  }
+
+  .footer__title {
+    color: var(--header__title-color);
+    text-shadow: 4px 4px 0 var(--accent-color);
+  }
+}
+
 /*
   Специально для тёмной темы при наличии класса,
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
+
+.page {
+}
 
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
