--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,9 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  font-family: "IBM Plex Mono", sans-serif;
+  color: #353430;
+  font-size: 18px;
 }
 
 h1,
@@ -39,4 +42,5 @@ a {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  text-decoration: none;
 }
