--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,543 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  background-image: url("../images/cover-image-light.png");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 20px;
+  max-width: 1024px;
+  color: var(--text-color);
+}
+
+/* --------------ССЫЛКИ----------- */
+
+.links {
+  text-shadow: 1px 1px 0 var(--accent-color);
+  outline-color: transparent;
+}
+
+.links:hover {
+  border-bottom: 1px solid var(--text-color);
+}
+
+.links:focus {
+  outline: 1px solid var(--text-color);
+  outline-offset: -1px;
+}
+
+.header {
+  height: 100vh;
+  max-height: 768px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  grid-template-columns: 1fr 1fr;
+  position: relative;
+}
+
+.decorated-zone::after {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  content: "";
+  border-top: 1px solid var(--text-color);
+  border-right: 1px solid var(--text-color);
+  width: 25px;
+  height: 25px;
+}
+
+.decorated-zone::before {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  content: "";
+  border-bottom: 1px solid var(--text-color);
+  border-left: 1px solid var(--text-color);
+  width: 25px;
+  height: 25px;
+}
+
+.header__theme-menu {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  justify-self: center;
+  align-self: start;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  font-size: 18px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 1px 13px;
+  text-transform: lowercase;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--text-color);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--text-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--text-color);
+  pointer-events: none;
+}
+
+.header__title {
+  font-weight: bold;
+  color: var(--header__title-color);
+  margin-left: -25px;
+  grid-row: 2/3;
+  grid-column: 1/3;
+  align-self: center;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  text-shadow: 4px 4px 0 #ff0070;
+}
+
+.header__description {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 23px;
+  grid-row: 3/4;
+  grid-column: 2/3;
+  justify-self: end;
+  align-self: center;
+}
+
+/* ---------------------------------- */
+
+.title-decor {
+  font-size: 18px;
+  min-height: 23px;
+  background-color: var(--accent-color);
+}
+
+/* --------------------Основной контент------------- */
+
+main {
+  display: grid;
+  grid-gap: 80px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.section-title {
+  margin-bottom: 10px;
+}
+
+.section-text {
+  font-size: 18px;
+}
+
+/* ------------------------------Section1------------------------------------- */
+
+.about {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
+}
+
+.about__title {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.about__card2 {
+  grid-column: 2/4;
+}
+
+.about__card3 {
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+
+/* ------------------------------Section2------------------------------------------- */
+.example {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto 1fr;
+  gap: 20px;
+}
+
+.example__title {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.example__card1 {
+  grid-column: 1/2;
+}
+
+.example__card2 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+
+.example__card3 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.example__card4 {
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+
+/* ------------------------------Section3------------------------------------------- */
+
+.advice {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: repeat(6, auto);
+  gap: 20px;
+}
+
+.advice-title {
+  font-weight: bold;
+}
+
+.advice__card1 {
+  grid-column: 1/2;
+  grid-row: 1/6;
+}
+
+.advice__card2 {
+  grid-column: 2/4;
+  grid-row: 1/2;
+}
+
+.advice__card3 {
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+
+.advice__card4 {
+  grid-column: 2/4;
+  grid-row: 3/4;
+}
+
+.advice__card5 {
+  grid-column: 2/4;
+  grid-row: 4/5;
+}
+
+.advice__card6 {
+  grid-column: 2/4;
+  grid-row: 5/6;
+}
+
+.advice__card7 {
+  grid-column: 2/4;
+  grid-row: 6/7;
+}
+
+.advice-title {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.advice-subtitle {
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+
+/* -----------------pictures------- */
+
+.pictures__cards {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: repeat(4, auto);
+}
+
+.pictures__title {
+  font-size: 18px;
+  font-weight: bold;
+  grid-column: 1/4;
+  grid-row: 1/2;
+}
+
+.pictures__card1 {
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+
+.pictures__card2 {
+  grid-column: 3/4;
+  grid-row: 2/4;
+}
+
+.pictures__card3 {
+  grid-column: 1/2;
+  grid-row: 3/5;
+}
+
+.pictures__card4 {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+
+.pictures__card5 {
+  grid-column: 2/4;
+  grid-row: 4/5;
+}
+
+.pictures__card-pic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.footer {
+  height: 100vh;
+  max-height: 768px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  position: relative;
+}
+
+.footer__title {
+  font-weight: bold;
+  color: var(--header__title-color);
+  grid-row: 2/3;
+  grid-column: 1/3;
+  align-self: center;
+  justify-self: center;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  text-shadow: 4px 4px 0 #ff0070;
+}
+
+.page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+}
+
+@media (max-width: 1024px) {
+}
+
+@media (max-width: 768px) {
+  .header {
+    height: 100vh;
+    max-height: 1024px;
+    max-width: 768px;
+  }
+
+  .header__theme-menu {
+    align-self: center;
+    justify-self: end;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    align-items: center;
+  }
+
+  .example {
+    grid-template-rows: auto auto auto auto;
+    gap: 20px;
+  }
+
+  .example__card2 {
+    grid-column: 1/4;
+    grid-row: 2/3;
+  }
+
+  .example__card3 {
+    grid-column: 1/4;
+    grid-row: 3/4;
+  }
+
+  .example__card4 {
+    grid-column: 1/4;
+    grid-row: 4/5;
+  }
+}
+
+@media (max-width: 375px) {
+  .page {
+    padding: 10px;
+    max-width: 375px;
+  }
+
+  .header {
+    height: 100vh;
+    max-height: 688px;
+    display: grid;
+    grid-template-rows: 1fr min-content 1fr;
+    grid-template-columns: 1fr;
+  }
+
+  .header__theme-menu {
+    grid-column: 1/2;
+  }
+
+  .header__title {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
+
+  .header__description {
+    grid-column: 1/2;
+    justify-self: stretch;
+    align-self: center;
+  }
+
+  main {
+    display: grid;
+    grid-gap: 50px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .about {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr 1fr;
+    gap: 20px;
+  }
+
+  .about__card1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .about__card2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .about__card3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+
+  .example {
+    display: grid;
+    grid-template-columns: auto 1fr auto 1fr;
+    grid-template-rows: 1fr;
+    gap: 20px;
+  }
+  .example__card1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .example__card2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .example__card3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+
+  .example__card4 {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+
+  .advice {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, auto);
+    gap: 20px;
+  }
+
+  .advice__card1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .advice__card2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .advice__card3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+
+  .advice__card4 {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+
+  .advice__card5 {
+    grid-column: 1/2;
+    grid-row: 5/6;
+  }
+
+  .advice__card6 {
+    grid-column: 1/2;
+    grid-row: 6/7;
+  }
+
+  .advice__card7 {
+    grid-column: 1/2;
+    grid-row: 7/8;
+  }
+
+  .pictures__cards {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(6, auto);
+  }
+
+  .pictures__title {
+    grid-column: 1/4;
+    grid-row: 1/2;
+    width: 100%;
+  }
+
+  .pictures__card1 {
+    grid-column: 1/4;
+    grid-row: 2/3;
+    width: 100%;
+  }
+
+  .pictures__card2 {
+    grid-column: 1/4;
+    grid-row: 3/4;
+    width: 100%;
+  }
+
+  .pictures__card3 {
+    grid-column: 1/4;
+    grid-row: 4/5;
+    width: 100%;
+  }
+
+  .pictures__card4 {
+    grid-column: 1/4;
+    grid-row: 5/6;
+    width: 100%;
+  }
+
+  .pictures__card5 {
+    grid-column: 1/4;
+    grid-row: 6/7;
+    width: 100%;
+  }
+
+  .pictures__card-pic {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
