--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,10 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+/* Файл variables.css */
+:root {
+  --accent-color: #ff8dcb;
+  --text-color: #353430;
+  --header__title-color: #ffc2e6;
+}
