--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,6 @@
 
 .header {
   height: 100vh;
-  max-height: 768px;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   grid-template-columns: 1fr 1fr;
@@ -99,6 +98,7 @@
   grid-column: 1/3;
   align-self: center;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 82.5%;
   text-shadow: 4px 4px 0 #ff0070;
 }
 
@@ -201,10 +201,6 @@ main {
   gap: 20px;
 }
 
-.advice-title {
-  font-weight: bold;
-}
-
 .advice__card1 {
   grid-column: 1/2;
   grid-row: 1/6;
@@ -299,7 +295,7 @@ main {
 
 .footer {
   height: 100vh;
-  max-height: 768px;
+
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   position: relative;
@@ -313,6 +309,7 @@ main {
   align-self: center;
   justify-self: center;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 82.5%;
   text-shadow: 4px 4px 0 #ff0070;
 }
 
@@ -320,13 +317,12 @@ main {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
 
-
-
 @media (max-width: 768px) {
   .header {
     height: 100vh;
-    max-height: 1024px;
-    max-width: 768px;
+    grid-template-rows: 1fr min-content 1fr;
+    grid-template-columns: 1fr 1fr;
+    position: relative;
   }
 
   .header__theme-menu {
@@ -336,7 +332,6 @@ main {
 
   .header__theme-menu-list {
     flex-direction: column;
-    /* align-items: center; */
     justify-content: center;
     align-items: center;
   }
@@ -365,12 +360,10 @@ main {
 @media (max-width: 375px) {
   .page {
     padding: 10px;
-    max-width: 375px;
   }
 
   .header {
     height: 100vh;
-    max-height: 688px;
     display: grid;
     grid-template-rows: 1fr min-content 1fr;
     grid-template-columns: 1fr;
@@ -384,6 +377,7 @@ main {
     grid-column: 1/2;
     grid-row: 2/3;
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    line-height: 82.5%;
   }
 
   .header__description {
