--- a/styles/dark.css
+++ b/styles/dark.css
@@ -29,7 +29,7 @@
 
   .decorated-el::before {
     position: absolute;
-    right: 8px;
+    right: 0px;
     content: "rec";
     font-size: 18px;
     line-height: 25px;
@@ -65,7 +65,7 @@
   }
 
   .header__theme-menu-button:hover {
-    outline: 1px solid var(--accent-color);
+    outline: 1px solid rgb(255, 0, 112, 0.4);
   }
 
   .header__theme-menu-button:focus-visible {
