--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,11 @@
   padding: 20px;
   max-width: 1024px;
   color: var(--text-color);
+  /* *,
+  *::before,
+  *::after {
+    outline: 1px solid red;
+  } */
 }
 
 .links {
@@ -21,16 +26,33 @@
 }
 
 .links:focus {
+  outline: none;
+}
+
+.links:focus-visible {
   outline: 1px solid var(--text-color);
   outline-offset: -1px;
 }
 
+.block {
+  border: 1px solid blue;
+}
+
 .header {
+  /* 
+  Здравствуйте!
+  Я все-таки решил оставить свойство grid-template-rows: 1fr min-content 1fr,
+   чтобы разбить на три ряда, в первом меню, во втором заголовок,
+    в третьем - подзаголовок. И вроде, совпадает с макетом.
+    Без этого свойства у меня, к сожалению, не получается 
+    */
+
   height: 100vh;
+  min-height: 768px;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
-  grid-template-columns: 1fr 1fr;
   position: relative;
+  padding-bottom: 20px;
 }
 
 .decorated-zone::after {
@@ -78,7 +100,11 @@
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid var(--text-color);
+  outline: 1px solid rgba(50, 49, 45, 0.4);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
 }
 
 .header__theme-menu-button:focus-visible {
@@ -94,7 +120,6 @@
   font-weight: bold;
   color: var(--header__title-color);
   margin-left: -25px;
-  grid-row: 2/3;
   grid-column: 1/3;
   align-self: center;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
@@ -106,17 +131,17 @@
   font-size: 18px;
   font-weight: bold;
   line-height: 23px;
-  grid-row: 3/4;
   grid-column: 2/3;
   justify-self: end;
   align-self: center;
+  max-width: 491px;
 }
 
 /* ---------------------------------- */
 
 .title-decor {
+  width: 100%;
   font-size: 18px;
-  min-height: 23px;
   background-color: var(--accent-color);
 }
 
@@ -151,11 +176,11 @@ main {
   font-size: 18px;
 }
 
-.about__card2 {
+.about-multitasking {
   grid-column: 2/4;
 }
 
-.about__card3 {
+.about-dopamine {
   grid-column: 2/4;
   grid-row: 2/3;
 }
@@ -173,21 +198,21 @@ main {
   font-weight: bold;
 }
 
-.example__card1 {
+.example-concentration {
   grid-column: 1/2;
 }
 
-.example__card2 {
+.example-multitasking {
   grid-column: 1/2;
   grid-row: 2/3;
 }
 
-.example__card3 {
+.example-food {
   grid-column: 2/3;
   grid-row: 2/3;
 }
 
-.example__card4 {
+.example-gadgets {
   grid-column: 3/4;
   grid-row: 2/3;
 }
@@ -201,37 +226,37 @@ main {
   gap: 20px;
 }
 
-.advice__card1 {
+.advice-fish {
   grid-column: 1/2;
   grid-row: 1/6;
 }
 
-.advice__card2 {
+.advice-simple {
   grid-column: 2/4;
   grid-row: 1/2;
 }
 
-.advice__card3 {
+.advice-sky {
   grid-column: 2/4;
   grid-row: 2/3;
 }
 
-.advice__card4 {
+.advice-music {
   grid-column: 2/4;
   grid-row: 3/4;
 }
 
-.advice__card5 {
+.advice-walk {
   grid-column: 2/4;
   grid-row: 4/5;
 }
 
-.advice__card6 {
+.advice-food {
   grid-column: 2/4;
   grid-row: 5/6;
 }
 
-.advice__card7 {
+.advice-book {
   grid-column: 2/4;
   grid-row: 6/7;
 }
@@ -262,27 +287,27 @@ main {
   grid-row: 1/2;
 }
 
-.pictures__card1 {
+.pictures-sunset {
   grid-column: 1/3;
   grid-row: 2/3;
 }
 
-.pictures__card2 {
+.pictures-ice-cream {
   grid-column: 3/4;
   grid-row: 2/4;
 }
 
-.pictures__card3 {
+.pictures-tape {
   grid-column: 1/2;
   grid-row: 3/5;
 }
 
-.pictures__card4 {
+.pictures-books {
   grid-column: 2/3;
   grid-row: 3/4;
 }
 
-.pictures__card5 {
+.pictures-street {
   grid-column: 2/4;
   grid-row: 4/5;
 }
@@ -294,8 +319,9 @@ main {
 }
 
 .footer {
+  padding-top: 20px;
   height: 100vh;
-
+  min-height: 768px;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   position: relative;
@@ -305,7 +331,6 @@ main {
   font-weight: bold;
   color: var(--header__title-color);
   grid-row: 2/3;
-  grid-column: 1/3;
   align-self: center;
   justify-self: center;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
@@ -320,9 +345,8 @@ main {
 @media (max-width: 768px) {
   .header {
     height: 100vh;
-    grid-template-rows: 1fr min-content 1fr;
-    grid-template-columns: 1fr 1fr;
-    position: relative;
+    min-height: 1024px;
+    padding-bottom: 20px;
   }
 
   .header__theme-menu {
@@ -336,24 +360,34 @@ main {
     align-items: center;
   }
 
+  .header__description {
+    max-width: 364px;
+  }
+
   .example {
     grid-template-rows: auto auto auto auto;
     gap: 20px;
   }
 
-  .example__card2 {
+  .example-multitasking {
     grid-column: 1/4;
     grid-row: 2/3;
   }
 
-  .example__card3 {
+  .example-food {
     grid-column: 1/4;
     grid-row: 3/4;
   }
 
-  .example__card4 {
+  .example-gadgets {
     grid-column: 1/4;
     grid-row: 4/5;
+  }
+
+  .footer {
+    height: 100vh;
+    min-height: 1024px;
+    padding-top: 20px;
   }
 }
 
@@ -364,9 +398,9 @@ main {
 
   .header {
     height: 100vh;
-    display: grid;
-    grid-template-rows: 1fr min-content 1fr;
+    min-height: 668px;
     grid-template-columns: 1fr;
+    padding-bottom: 10px;
   }
 
   .header__theme-menu {
@@ -374,6 +408,7 @@ main {
   }
 
   .header__title {
+    margin: auto;
     grid-column: 1/2;
     grid-row: 2/3;
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -400,43 +435,44 @@ main {
     gap: 20px;
   }
 
-  .about__card1 {
+  .about-focus {
     grid-column: 1/2;
     grid-row: 1/2;
   }
 
-  .about__card2 {
+  .about-multitasking {
     grid-column: 1/2;
     grid-row: 2/3;
   }
 
-  .about__card3 {
+  .about-dopamine {
     grid-column: 1/2;
     grid-row: 3/4;
   }
 
   .example {
     display: grid;
-    grid-template-columns: auto 1fr auto 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     gap: 20px;
   }
-  .example__card1 {
+
+  .example-concentration {
     grid-column: 1/2;
     grid-row: 1/2;
   }
 
-  .example__card2 {
+  .example-multitasking {
     grid-column: 1/2;
     grid-row: 2/3;
   }
 
-  .example__card3 {
+  .example-food {
     grid-column: 1/2;
     grid-row: 3/4;
   }
 
-  .example__card4 {
+  .example-gadgets {
     grid-column: 1/2;
     grid-row: 4/5;
   }
@@ -448,37 +484,37 @@ main {
     gap: 20px;
   }
 
-  .advice__card1 {
+  .advice-fish {
     grid-column: 1/2;
     grid-row: 1/2;
   }
 
-  .advice__card2 {
+  .advice-simple {
     grid-column: 1/2;
     grid-row: 2/3;
   }
 
-  .advice__card3 {
+  .advice-sky {
     grid-column: 1/2;
     grid-row: 3/4;
   }
 
-  .advice__card4 {
+  .advice-music {
     grid-column: 1/2;
     grid-row: 4/5;
   }
 
-  .advice__card5 {
+  .advice-walk {
     grid-column: 1/2;
     grid-row: 5/6;
   }
 
-  .advice__card6 {
+  .advice-food {
     grid-column: 1/2;
     grid-row: 6/7;
   }
 
-  .advice__card7 {
+  .advice-book {
     grid-column: 1/2;
     grid-row: 7/8;
   }
@@ -496,31 +532,31 @@ main {
     width: 100%;
   }
 
-  .pictures__card1 {
+  .pictures-sunset {
     grid-column: 1/4;
     grid-row: 2/3;
     width: 100%;
   }
 
-  .pictures__card2 {
+  .pictures-ice-cream {
     grid-column: 1/4;
     grid-row: 3/4;
     width: 100%;
   }
 
-  .pictures__card3 {
+  .pictures-tape {
     grid-column: 1/4;
     grid-row: 4/5;
     width: 100%;
   }
 
-  .pictures__card4 {
+  .pictures-books {
     grid-column: 1/4;
     grid-row: 5/6;
     width: 100%;
   }
 
-  .pictures__card5 {
+  .pictures-street {
     grid-column: 1/4;
     grid-row: 6/7;
     width: 100%;
@@ -530,5 +566,11 @@ main {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  .footer {
+    height: 100vh;
+    min-height: 668px;
+    padding-top: 10px;
   }
 }
