--- a/styles/style.css
+++ b/styles/style.css
@@ -6,14 +6,13 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 20px;
   max-width: 1024px;
   color: var(--text-color);
-  /* *,
+  *,
   *::before,
   *::after {
     outline: 1px solid red;
-  } */
+  }
 }
 
 .links {
@@ -34,31 +33,19 @@
   outline-offset: -1px;
 }
 
-.block {
-  border: 1px solid blue;
-}
-
 .header {
-  /* 
-  Здравствуйте!
-  Я все-таки решил оставить свойство grid-template-rows: 1fr min-content 1fr,
-   чтобы разбить на три ряда, в первом меню, во втором заголовок,
-    в третьем - подзаголовок. И вроде, совпадает с макетом.
-    Без этого свойства у меня, к сожалению, не получается 
-    */
-
   height: 100vh;
   min-height: 768px;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   position: relative;
-  padding-bottom: 20px;
+  padding: 20px;
 }
 
 .decorated-zone::after {
   position: absolute;
-  top: 0px;
-  right: 0px;
+  top: 20px;
+  right: 20px;
   content: "";
   border-top: 1px solid var(--text-color);
   border-right: 1px solid var(--text-color);
@@ -68,8 +55,8 @@
 
 .decorated-zone::before {
   position: absolute;
-  bottom: 0px;
-  left: 0px;
+  bottom: 20px;
+  left: 20px;
   content: "";
   border-bottom: 1px solid var(--text-color);
   border-left: 1px solid var(--text-color);
@@ -119,7 +106,7 @@
 .header__title {
   font-weight: bold;
   color: var(--header__title-color);
-  margin-left: -25px;
+  margin-left: -20px;
   grid-column: 1/3;
   align-self: center;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
@@ -130,14 +117,12 @@
 .header__description {
   font-size: 18px;
   font-weight: bold;
-  line-height: 23px;
+  line-height: 23.4px;
   grid-column: 2/3;
   justify-self: end;
   align-self: center;
   max-width: 491px;
 }
-
-/* ---------------------------------- */
 
 .title-decor {
   width: 100%;
@@ -145,13 +130,10 @@
   background-color: var(--accent-color);
 }
 
-/* --------------------Основной контент------------- */
-
 main {
   display: grid;
   grid-gap: 80px;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding: 60px 20px;
 }
 
 .section-title {
@@ -160,9 +142,8 @@ main {
 
 .section-text {
   font-size: 18px;
+  line-height: 23.4px;
 }
-
-/* ------------------------------Section1------------------------------------- */
 
 .about {
   display: grid;
@@ -185,7 +166,6 @@ main {
   grid-row: 2/3;
 }
 
-/* ------------------------------Section2------------------------------------------- */
 .example {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -216,8 +196,6 @@ main {
   grid-column: 3/4;
   grid-row: 2/3;
 }
-
-/* ------------------------------Section3------------------------------------------- */
 
 .advice {
   display: grid;
@@ -271,13 +249,15 @@ main {
   margin-bottom: 10px;
 }
 
-/* -----------------pictures------- */
-
 .pictures__cards {
   display: grid;
   gap: 20px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: repeat(4, auto);
+}
+
+.pictures__card {
+  overflow: hidden;
 }
 
 .pictures__title {
@@ -319,20 +299,17 @@ main {
 }
 
 .footer {
-  padding-top: 20px;
+  padding: 20px;
   height: 100vh;
   min-height: 768px;
   display: grid;
-  grid-template-rows: 1fr min-content 1fr;
+  place-items: center;
   position: relative;
 }
 
 .footer__title {
   font-weight: bold;
   color: var(--header__title-color);
-  grid-row: 2/3;
-  align-self: center;
-  justify-self: center;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 82.5%;
   text-shadow: 4px 4px 0 #ff0070;
@@ -346,7 +323,6 @@ main {
   .header {
     height: 100vh;
     min-height: 1024px;
-    padding-bottom: 20px;
   }
 
   .header__theme-menu {
@@ -387,20 +363,25 @@ main {
   .footer {
     height: 100vh;
     min-height: 1024px;
-    padding-top: 20px;
   }
 }
 
-@media (max-width: 375px) {
-  .page {
-    padding: 10px;
-  }
-
+@media (max-width: 500px) {
   .header {
     height: 100vh;
     min-height: 668px;
     grid-template-columns: 1fr;
-    padding-bottom: 10px;
+    padding: 10px;
+  }
+
+  .decorated-zone::after {
+    top: 10px;
+    right: 10px;
+  }
+
+  .decorated-zone::before {
+    bottom: 10px;
+    left: 10px;
   }
 
   .header__theme-menu {
@@ -424,8 +405,7 @@ main {
   main {
     display: grid;
     grid-gap: 50px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding: 40px 10px;
   }
 
   .about {
@@ -571,6 +551,11 @@ main {
   .footer {
     height: 100vh;
     min-height: 668px;
-    padding-top: 10px;
+    padding: 10px;
+  }
+
+  .footer__title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    line-height: 82.5%;
   }
 }
